# algotrader-rs

./: .gitignore  Cargo.toml  commit-this  commit-to-master  docker-compose.yml  settings  shit.idx
config/: postgresql.conf
crates/ai-models/: Cargo.toml
crates/ai-models-old/: Cargo.toml
crates/ai-models-old/examples/: ag-news-infer.rs
crates/ai-models-old/src/: lib.rs
crates/ai-models-old/src/price_gain/data/: batcher.rs  dataset.rs
crates/ai-models-old/src/price_gain/inference/: mod.rs
crates/ai-models-old/src/price_gain/model/: mod.rs
crates/ai-models-old/src/price_gain/training/: mod.rs
crates/ai-models/examples/: ag-news-train.rs  db-pedia-infer.rs  db-pedia-train.rs
crates/ai-models/src/: lib.rs
crates/ai-models/src/dummy_strategy/: mod.rs
crates/ai-models/src/lob_trans-old/data/: batcher.rs  dataset.rs  mod.rs
crates/ai-models/src/lob_trans-old/model/: mlp.rs  mod.rs
crates/ai-models/src/lob_trans-old/training/: mod.rs
crates/ai-models/src/lob_trans/data/: batcher.rs  data.rs  data_spec.rs  dataset.rs
crates/ai-models/src/lob_trans/model/: embedder.rs  lob_trans_mlp.rs  mlp.rs  mod.rs  multi_layer_lstm.rs
crates/ai-models/src/lob_trans/training/: mod.rs
crates/ai-models/src/price_gain/: mod.rs
crates/ai-models/src/price_gain/data/: batcher.rs  data_spec.rs  dataset.rs  mod.rs  tokenizer.rs
crates/ai-models/src/price_gain/inference/: mod.rs
crates/ai-models/src/price_gain/model/: mod.rs
crates/ai-models/src/price_gain/training/: mod.rs
crates/ai-models/src/price_gain_old/: mod.rs
crates/ai-models/src/price_gain_old/data/: data.rs
crates/ai-models/src/price_gain_old/model/: mod.rs
crates/ai-models/src/test_strategy/: mod.rs
crates/data-handlers/: Cargo.toml
crates/data-handlers/src/: data_handler.rs  lib.rs
crates/data-handlers/src/mpk/: mod.rs
crates/extractors/: Cargo.toml
crates/extractors/src/: extractor.rs  lib.rs
crates/extractors/src/dummy_extractor/: mod.rs
crates/extractors/src/interval_extractor/: mod.rs
crates/models/: Cargo.toml
crates/models/src/: user.rs
crates/order-book/: Cargo.toml
crates/order-book/src/: book.rs  date_time.rs  level.rs  lib.rs  market.rs
crates/strategies/: Cargo.toml
crates/strategies/src/: lib.rs  strategy.rs
crates/strategies/src/ai_strategy/: mod.rs
crates/strategies/src/dummy_strategy/: mod.rs
crates/strategies/src/test_strategy/: mod.rs
crates/utilities/: Cargo.toml
crates/utilities/src/: date_time.rs  lib.rs
docs/: lit.py  order-book  programs-and-flows  setup  sqlx
migrations/: 20260508171102_initial.down.sql  20260508171102_initial.up.sql
scripts/: data-file-stats  download  extract  historical-book  historical-inference  live-book  order-book  shuffle  train
