[workspace.package]
name = "algotrader-rs"
version = "1.0.0"
edition = "2024"
rust-version = "1.92"
license = "Proprietary"
homepage = "https://fuzing.github.io/algotrader-rs"
repository = "https://github.com/fuzing/algotrader-rs"
exclude = [".github/"]
authors = ["Peter Beresford", "Fuzing, LLC"]
keywords = ["pdl", "pipelines" ]

[workspace]
members = [
    "bin/downloader",
    "bin/historical-book",
    "bin/migrate",
    "crates/models",
    "crates/order-book",
]
# add to this for bins/crates that need testing/benching
#default-members = [
#    "bin/order-matcher",
#    "bin/order-matcher-exerciser",
#    "bin/broker-terminal",
#]
#exclude = ["book/sources", "book/cli"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021, but 2024 moved to "3"
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "3"


[workspace.lints.rust]
# TODO - PMB - warn on dead_code once ready for production
dead_code = "allow"
missing_debug_implementations = "warn"
missing_docs = "allow"
#rust_2018_idioms = { level = "deny", priority = -1 }
#rust_2024_idioms = { level = "deny", priority = -1 }
# TODO - PMB - warn on unreachable_pub once ready for production
unreachable_pub = "allow"
# TODO - PMB - warn on unused_imports once ready for production
unused_imports = "warn"
# TODO - PMB - warn on unused_variables once ready for production
unused_variables = "allow"

unused_must_use = "deny"
# rust.unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"



[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing-const-for-fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
result_large_err = "allow"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
opt-level = 3
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

# Speed up tests.
#[profile.dev.package]
#proptest.opt-level = 3
#rand_chacha.opt-level = 3
#rand_xorshift.opt-level = 3
#unarray.opt-level = 3


[profile.release]
opt-level = 3
lto = true
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 1

# Use the `--profile profiling` flag to show symbols in release mode.
# e.g. `cargo build --profile profiling`
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

# Include debug info in benchmarks too.
[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["default", "derive"] }
chrono = {  version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
console_error_panic_hook = "0.1.7"
criterion = "0.8.2"
dotenv = "0.15.0"
databento = { version = "0.50.0", features = ["historical", "live"], default-features = true }
order-book = { path = "crates/order-book" }
rand = "0.10.1" # ""0.10.0"
reqwest = { version = "0.13.3", features = ["native-tls"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "postgres", "chrono", "uuid", "derive"] }
thiserror = "2.0.18"
time = "0.3.47"
time_range = "0.0.3-alpha.0"
tokio = { version = "1.52.2", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = {  version = "1.23.1", features = ["serde", "v4"] }


#
## [patch.crates-io]
## alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "cfb13aa" }
