[package]
name = "ai-models-old"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
anyhow.workspace = true
#burn.workspace = true
burn = { workspace = true, features = [
    "train",
#    "optim",
    "tui",
    "sqlite-bundled",
    "metrics",
    "flex",
    "autotune",
    "fusion",
    "std",
] }



chrono.workspace = true
chrono-tz.workspace = true
databento.workspace = true
derive-new.workspace = true
dotenv.workspace = true
order-book.workspace = true
#reqwest = {workspace = true, features = ["native-tls"]}
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokenizers.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true



#burn = {workspace = true, features = ["fusion", "metrics", "std", "train", "tui", "vision", "wgpu", "ndarray", "autotune"] }
#rand.workspace = true
#serde = { workspace = true, features = ["std", "derive"] }

[lints]
workspace = true

[features]
default = []
f16 = []
flex32 = []
tch-cpu = ["burn/tch"]
tch-gpu = ["burn/tch"]
wgpu = ["burn/wgpu"]
vulkan = ["burn/vulkan"]
flex = ["burn/flex"]
remote = ["burn/remote"]
cuda = ["burn/cuda"]
rocm = ["burn/rocm"]
metal = ["burn/metal"]
ddp = ["burn/distributed"]

#[dev-dependencies]
#criterion.workspace = true
#
#[[bench]]
#name = "order_book_benchmark"
#harness = false