[package]
name = "ai-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
anyhow.workspace = true
#burn.workspace = true
burn = { workspace = true, features = [
    "train",
    "optim",
    "tui",
    "sqlite-bundled",
    "metrics",
    "flex",
    "autotune",
    "fusion",
    "std",
]
}

derive-new.workspace = true
serde.workspace = true
serde_json.workspace = true
tokenizers.workspace = true


[lints]
workspace = true

[features]
default = []
f16 = []
flex32 = []
tch-cpu = ["burn/tch"]
tch-gpu = ["burn/tch"]
wgpu = ["burn/wgpu"]
vulkan = ["burn/vulkan"]
flex = ["burn/flex"]
remote = ["burn/remote"]
cuda = ["burn/cuda"]
rocm = ["burn/rocm"]
metal = ["burn/metal"]
ddp = ["burn/distributed"]

