[package]
name = "data-handlers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
memmap2.workspace = true
rmp-serde.workspace = true
serde.workspace = true

[lints]
workspace = true

