[package]
name = "models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
sqlx.workspace = true
uuid.workspace = true

[lints]
workspace = true

