[package]
name = "utilities"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
time.workspace = true
time-tz.workspace = true

[lints]
workspace = true

[features]
#default = ["burn/tui"]
#ndarray = ["burn/ndarray"]
#ndarray-blas-accelerate = ["burn/ndarray", "burn/accelerate"]
#ndarray-blas-netlib = ["burn/ndarray", "burn/blas-netlib"]
#ndarray-blas-openblas = ["burn/ndarray", "burn/openblas"]
#tch-cpu = ["burn/tch"]
#tch-gpu = ["burn/tch"]
#remote = ["burn/remote"]
#wgpu = ["burn/wgpu", "burn/default"]
#metal = ["burn/metal", "burn/default"]
#cuda = ["burn/cuda", "burn/default"]
#vulkan = ["burn/vulkan", "burn/default"]
#rocm = ["burn/rocm", "burn/default"]


#[dev-dependencies]
#criterion.workspace = true
#
#[[bench]]
#name = "order_book_benchmark"
#harness = false